# VibraVid

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/docs/it/: README.md
.github/workflows/: docker-publish.yml
Conf/: config.json  login.json
GUI/: requirements.txt
GUI/searchapp/: apps.py  arr_auto.py  models.py  urls.py  views.py
GUI/searchapp/api/: base.py  mostraguarda.py  spotify.py
GUI/searchapp/arr/: __init__.py  arr_service.py  downloader_service.py  processor_service.py
GUI/searchapp/migrations/: 0005_arr_integration.py  0005_download_history.py  0006_arrwebhookevent_extra_fields.py  0007_merge_20260512_1803.py
GUI/webgui/: settings.py
Test/Downloads/: HLS.py  MP4.py
VibraVid/cli/command/: download.py
VibraVid/core/decryptor/: _models.py  _mp4_inspector.py  _subprocess_runner.py  decryptor.py
VibraVid/core/downloader/: _drm_probe.py  _interrupt.py  _post_decrypt.py  _supa_tracker.py  base.py  dash.py  hls.py  ism.py  mp4.py
VibraVid/core/drm/: manager.py  system.py  widevine.py
VibraVid/core/manifest/: m3u8.py  mpd.py  stream.py
VibraVid/core/muxing/: hybrid.py  merge.py
VibraVid/core/source/: _dash_utils.py  base.py  download_utils.py  downloader.py  downloader_live.py
VibraVid/core/ui/: progress_bar.py  tracker.py
VibraVid/core/utils/: selector.py
VibraVid/player/: loadm.py  maxstream.py  vidxgo.py
VibraVid/provider/: tmdb.py
VibraVid/setup/: binary_paths.py
VibraVid/upload/: version.py
VibraVid/utils/: config.py  logger.py  tmdb_client.py
(+30 files in other folders)
