[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VibraVid"
version = "1.2.3"
description = "Download content from streaming platforms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arrowar"}
]
dependencies = [
    "bs4",
    "rich",
    "ttconv",
    "unidecode",
    "curl_cffi",
    "pathvalidate",
    "ua-generator",
    "pywidevine",
    "pyplayready",
    "pycryptodomex",
]

[project.scripts]
VibraVid = "VibraVid.cli.run:main"

[project.urls]
Homepage = "https://github.com/AstraeLabs/VibraVid"
"Bug Reports" = "https://github.com/AstraeLabs/VibraVid/issues"

[tool.setuptools]
packages = ["VibraVid"]

[tool.setuptools.package-data]
VibraVid = [
    "**/*.txt", 
    "**/*.json",
    "**/*.yaml", 
    "**/*.yml", 
    "**/*.cfg",
    "**/*.py"
]